--- a/fonts/icomoon/style.css
+++ b/fonts/icomoon/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('fonts/icomoon.eot?xrble3');
-  src:  url('fonts/icomoon.eot?xrble3#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.ttf?xrble3') format('truetype'),
-    url('fonts/icomoon.woff?xrble3') format('woff'),
-    url('fonts/icomoon.svg?xrble3#icomoon') format('svg');
+  src:  url('fonts/icomoon.eot?kfhhid');
+  src:  url('fonts/icomoon.eot?kfhhid#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?kfhhid') format('truetype'),
+    url('fonts/icomoon.woff?kfhhid') format('woff'),
+    url('fonts/icomoon.svg?kfhhid#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -24,6 +24,9 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-cancel:before {
+  content: "\e902";
+}
 .icon-facebook:before {
   content: "\ea90";
 }
@@ -41,4 +44,10 @@
 }
 .icon-linkedin2:before {
   content: "\eaca";
+}
+.icon-church:before {
+  content: "\e900";
+}
+.icon-icon:before {
+  content: "\e901";
 }
