--- a/fonts/icomoon/style.css
+++ b/fonts/icomoon/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('fonts/icomoon.eot?ktwwle');
-  src:  url('fonts/icomoon.eot?ktwwle#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.ttf?ktwwle') format('truetype'),
-    url('fonts/icomoon.woff?ktwwle') format('woff'),
-    url('fonts/icomoon.svg?ktwwle#icomoon') format('svg');
+  src:  url('fonts/icomoon.eot?zgmme2');
+  src:  url('fonts/icomoon.eot?zgmme2#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?zgmme2') format('truetype'),
+    url('fonts/icomoon.woff?zgmme2') format('woff'),
+    url('fonts/icomoon.svg?zgmme2#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -24,11 +24,11 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-.icon-hotel:before {
-  content: "\e901";
-}
-.icon-church:before {
+.icon-folded-newspaper:before {
   content: "\e900";
+}
+.icon-sun:before {
+  content: "\e901";
 }
 .icon-cancel:before {
   content: "\e902";
